# rumi-cli

./: .gitignore  Benjamin.md  Cargo.toml  IDEA.md  MAP.md  Problem.md  report.md  rescript-edge-cases.yml  rumi_config.json  sgconfig.yml  start_vllm.sh  test-rule.yml
_dev-system/: DASHBOARD.html  README.md  analyzer_state.json
_dev-system/analyzer/: Cargo.toml  test_manual_resolver
_dev-system/analyzer/src/: append_part2.pl  append_part2.py  chunk3b.rs  consolidator.rs  feedback.rs  guard.rs  lib.rs  main.rs  part2.rs  rescript_auto_discovery.rs  resolver.rs  state.rs
_dev-system/analyzer/src/drivers/: config.rs  css.rs  html.rs  mod.rs  rescript.rs  rust.rs
_dev-system/analyzer/src/graph/: mod.rs
_dev-system/analyzer/tests/: dependency_test.rs  rescript_parser_test.rs
_dev-system/config/: efficiency.json
_dev-system/plans/: CONFIG_PLAN.md  CSS_PLAN.md  RESCRIPT_PLAN.md  RUST_PLAN.md  SYSTEM_PLAN.md  metadata.json
docs/css/: reference.md
docs/html/: reference.md
docs/rescript/: reference.md
docs/rust/: reference.md
src/: Hello.res  config.rs  llm_client.rs  main.rs  map_parser.rs  session_manager.rs  thinking_engine.rs  tools.rs
tasks/: TASKS.md
tasks/completed/: 1081_Surgical_Refactor_SYSTEMS_FRONTEND_DONE.md  1082_Surgical_Refactor_COMPONENTS_FRONTEND_DONE.md  1083_Surgical_Refactor_UTILS_FRONTEND_DONE.md  1084_Surgical_Refactor_API_BACKEND_DONE.md  1085_Surgical_Refactor_MEDIA_BACKEND_DONE.md  1095_Classify_Ambiguous_Files_DONE.md  1097_Perfect_Dev_System_Analyzer.md  1104_refine_dev_system_analyzer_maintenance.md  (+39 more)
(+13 files in other folders)
